RESOLVED FIXED48153
Crash in Connection::isValid when called in response to VisitedLinksProvider::pendingVisitedLinksTimerFired after WebProcessPRoxy::didClose was already called
https://bugs.webkit.org/show_bug.cgi?id=48153
Summary Crash in Connection::isValid when called in response to VisitedLinksProvider:...
Jessie Berlin
Reported 2010-10-22 14:21:44 PDT
We should create a WebContext::webProcessDidClose method, have it stop the timer, and call that from WebContext::didClose.
Attachments
Add WebContext::proccessDidClose and stop the visited links timer there (3.72 KB, patch)
2010-10-22 14:29 PDT, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2010-10-22 14:29:46 PDT
Created attachment 71594 [details] Add WebContext::proccessDidClose and stop the visited links timer there
Jessie Berlin
Comment 2 2010-10-22 14:36:10 PDT
Anders Carlsson
Comment 3 2010-10-22 14:36:49 PDT
Comment on attachment 71594 [details] Add WebContext::proccessDidClose and stop the visited links timer there View in context: https://bugs.webkit.org/attachment.cgi?id=71594&action=review Looks great otherwise, r=me! > WebKit2/UIProcess/WebProcessProxy.cpp:420 > + m_context->processDidClose(this); You should call processDidClose before the call to WebProcessManager::processDidClose because calling it might delete the WebProcessProxy object.
Jessie Berlin
Comment 4 2010-10-22 14:42:55 PDT
(In reply to comment #3) > (From update of attachment 71594 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=71594&action=review > > Looks great otherwise, r=me! > > > WebKit2/UIProcess/WebProcessProxy.cpp:420 > > + m_context->processDidClose(this); > > You should call processDidClose before the call to WebProcessManager::processDidClose because calling it might delete the WebProcessProxy object. Done. Thanks for the review!
Jessie Berlin
Comment 5 2010-10-22 14:48:10 PDT
Comment on attachment 71594 [details] Add WebContext::proccessDidClose and stop the visited links timer there Committed in r70346 http://trac.webkit.org/changeset/70346
Adam Roben (:aroben)
Comment 6 2010-10-22 14:49:07 PDT
Is there any way to make a test for this?
Jessie Berlin
Comment 7 2010-10-22 16:39:19 PDT
(In reply to comment #6) > Is there any way to make a test for this? I don't think so at the moment. The case in which we are currently seeing this happen is not necessarily caused by the WebProcess crashing - more has to do with the timing of the WebProcess ending which is a bit hard to control.
Note You need to log in before you can comment on or make changes to this bug.