Crash in Connection::isValid when called in response to VisitedLinksProvider::pendingVisitedLinksTimerFired after WebProcessProxy::didClose was already called. https://bugs.webkit.org/show_bug.cgi?id=48153

Reviewed by Anders Carlsson.

* UIProcess/VisitedLinkProvider.cpp:
(WebKit::VisitedLinkProvider::stopVisitedLinksTimer):
* UIProcess/VisitedLinkProvider.h:

* UIProcess/WebContext.cpp:
(WebKit::WebContext::processDidClose):
Stop the pendingVisitedLinksTimer and null out the process.
* UIProcess/WebContext.h:

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::didClose):
Tell the WebContext that the WebProcess did close.



Canonical link: https://commits.webkit.org/60890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70346 268f45cc-cd09-0410-ab3c-d52691b4dbfc