WebKit2/UIProcess/VisitedLinkProvider.h
@@ -44,6 +44,8 @@ public:
     void populateVisitedLinksIfNeeded();
     void addVisitedLink(WebCore::LinkHash);
 
+    void stopVisitedLinksTimer();
+
 private:
     void pendingVisitedLinksTimerFired();
 
