WebKit2/UIProcess/WebContext.h
@@ -68,6 +68,7 @@ public:
     WebProcessProxy* process() const { return m_process.get(); }
 
     void processDidFinishLaunching(WebProcessProxy*);
+    void processDidClose(WebProcessProxy*);
 
     WebPageProxy* createWebPage(WebPageNamespace*);
 
